--- a/Text.css
+++ b/Text.css
@@ -33,7 +33,7 @@
 .B23 {
     display: flex;
     flex-direction: row;
-    width: 350px;
+    width: 400px;
     ;
     justify-content: space-between;
     position: relative;
@@ -46,7 +46,7 @@
 .seeproject {
     height: 40px;
     width: 180px;
-    border: white 2px solid;
+    border: rgb(142, 7, 192) 2px solid;
     background-color: rgb(142, 7, 192);
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
     color: aliceblue;
@@ -62,9 +62,10 @@
     overflow: hidden;
     z-index: 0;
 }
-
-    background-color: white;
-    color:rgb(142, 7, 192);
+.seeproject{
+    
+    background-color:rgb(142, 7, 192);
+    color:white;
 }
 
 .Hireme:hover,
@@ -150,7 +151,9 @@
 .About:active,
 .Portfolio:active,
 .Blog:active,
-.Contact:active {
+.Contact:active,
+.seeproject:active
+{
     opacity: 0.5;
 
 }
