--- a/Main.css
+++ b/Main.css
@@ -60,3 +60,99 @@
     background-repeat: no-repeat;
     background-size: 100%;
 }
+@media (max-width: 1080px) {
+    body {
+        font-size: 14px;
+        background-color: #d0f0d0;
+        
+    }
+.backPng{
+    opacity: 0;
+    width: 0;
+}
+.B23 {
+    display: flex;
+    flex-direction: row;
+    width: 800px;
+    justify-content: center;
+    justify-self: center;
+    align-items: center;
+    height: 150px;
+    justify-content: space-between;
+    position: relative;
+    /* left: 170px; */
+    left: 230px;
+
+
+
+}
+.Hireme::after{
+        font-size: 40px;
+
+}
+.seeproject::after{
+        font-size: 40px;
+
+}
+.Hireme,.seeproject{
+    height: 150px;
+    width: 320px;
+    font-size: 40px;
+}
+.letstalk{
+    position: relative;
+    left: -20px;
+}
+
+.text{
+    width: 1080PX;
+    height: 720px;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    justify-content: center;
+    position: relative;
+    
+}
+
+.T1 {
+    font-family: Bowlby One;
+    font-size: 90px;
+    color: rgb(142, 7, 192);
+    position: relative;
+    left: -20px;
+    
+}
+
+.T2 {
+    position: relative;
+    top: -160px;
+    font-family: Roboto;
+    font-size: 55px;
+    color: rgb(83, 83, 83);
+    font-weight: 900;
+    padding-bottom: 0px;
+    position: relative;
+    left: -30px;
+}
+
+.T12 {
+    color: rgb(83, 83, 83);
+    position: relative;
+    left: -20px;
+    position: relative;
+    left: -20px;
+}
+
+.T3 {
+    font-family: Roboto;
+    font-size: 35px;
+    color: rgb(83, 83, 83);
+    font-weight: bold;
+    padding-top: 0px;
+    margin-top: 0px;
+    position: relative;
+    top: -150px;
+    left: -30px;
+}
+}
